cmake_minimum_required(VERSION 2.8)

# GCC Debug ASM output
set(RTGU_DEBUG_ASM_OUPUT "-save-temps -O3")
set(CMAKE_C_FLAGS "${CMAKE_C_FLAGS} ${RTGU_DEBUG_ASM_OUPUT}")
set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} ${RTGU_DEBUG_ASM_OUPUT}")
set(CMAKE_C_FLAGS_RELEASE "${CMAKE_C_FLAGS_RELEASE} ${RTGU_DEBUG_ASM_OUPUT}")
set(CMAKE_CXX_FLAGS_RELEASE "${CMAKE_CXX_FLAGS_RELEASE} ${RTGU_DEBUG_ASM_OUPUT}")
set(CMAKE_C_FLAGS_DEBUG "${CMAKE_C_FLAGS_DEBUG} ${RTGU_DEBUG_ASM_OUPUT}")
set(CMAKE_CXX_FLAGS_DEBUG "${CMAKE_CXX_FLAGS_DEBUG} ${RTGU_DEBUG_ASM_OUPUT}")

FILE( GLOB RTGU_SOURCES "*.cpp" )
FILE( GLOB RTGU_SOURCES_C "*.c" )
FILE( GLOB RTGU_HEADERS "*.h" )
LIST( APPEND RTGU_SOURCES ${RTGU_SOURCES_C} )
LIST( APPEND RTGU_SOURCES ${RTGU_HEADERS} )

SOURCE_GROUP("" FILES ${RTGU_SOURCES})

ADD_LIBRARY(RTGUcore SHARED ${RTGU_SOURCES})

