set(CMAKE_INCLUDE_CURRENT_DIR ON)

MACRO(RTGU_ADD_UNIT_TEST TEST_NAME)
ADD_EXECUTABLE(test_${TEST_NAME} ${TEST_NAME}.cpp)
TARGET_LINK_LIBRARIES(test_${TEST_NAME} libUnitTest++)
ADD_TEST(test_${TEST_NAME} test_${TEST_NAME})
ENDMACRO(RTGU_ADD_UNIT_TEST)

RTGU_ADD_UNIT_TEST(image_algorithm)
RTGU_ADD_UNIT_TEST(image_creation)
RTGU_ADD_UNIT_TEST(image_filters)
RTGU_ADD_UNIT_TEST(image_gil_internals)
RTGU_ADD_UNIT_TEST(image_resize)
